--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<artifactId>springdemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	
+	<!--Para Servlet Container-->
+	<!--<packaging>war</packaging>-->
 
 	<name>springdemo</name>
 	<description>Demo project for Spring Boot</description>
@@ -46,6 +49,14 @@
 		  <version>11.2.0.4</version>
 		</dependency>
 		
+		<!--Para Servlet Container-->
+		<!--		
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-tomcat</artifactId>
+		   <scope>provided</scope>
+		</dependency>
+		-->
 	</dependencies>
 
 	<build>
