--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=HR
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
+#para usar un datasource
+#spring.datasource.jndi-name=java:comp/env/jdbc/DB_Name
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
